--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "@vercel/analytics": "1.3.1",
     "@vitejs/plugin-vue": "6.0.3",
     "autoprefixer": "^10.4.20",
+    "axios": "^1.13.2",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "cmdk": "1.0.4",
